--- a/css/images.css
+++ b/css/images.css
@@ -43,3 +43,21 @@
     margin:0;
     padding-top:5px;
 }
+
+@media screen and (max-width: 1300px){
+    .gallery .row{
+        flex-direction: column !important;
+        padding:0;
+    }
+
+    .gallery .pic{
+        padding: 1.5vh 20px;
+    }
+
+}
+
+@media screen and (max-width: 768px){
+}
+
+@media screen and (max-width: 600px){
+}
