--- a/css/images.css
+++ b/css/images.css
@@ -3,6 +3,7 @@
     font-size: 2.75em;
     margin: 0 auto;
     padding: 5px
+    text-align: center;
 }
 
 .gallery h2{
@@ -11,6 +12,7 @@
     font-style: italic;
     margin: 0 auto;
     padding: 5px;
+    text-align: center;
 }
 
 .gallery .row{
