--- a/css/root.css
+++ b/css/root.css
@@ -42,6 +42,12 @@ a.imgLink{
     display: flex;
 }
 
+@keyframes imageDarken{
+    from {filter: none);}
+    to {filter: brightness(0.6);}
+}
+    
+
 section.contactImg{
     height: 75cqw;
     width: 100%;
