--- a/css/headFoot.css
+++ b/css/headFoot.css
@@ -263,7 +263,7 @@ footer .copywrite p{
         margin: 0 auto 0 auto;
     }
 
-    header:not(.fixed):not(.closed) #mobileMenu{
+    header:not(.closed) #mobileMenu{
 	padding-bottom: 37px;
     }
 
